@@ -1,3 +1,14 @@
+Tue Jul 19 14:24:47 2005  Gary Maxey <gary.maxey@hp.com>
+
+        * bin/PerlACE/Process_Unix.pm: 
+
+          Append command line arguments based on ACE_RUNTEST_ARGS
+          environment variable.
+
+        * ace/config-tandem-nsk-mips-v3.h:
+
+          Adjust platform specific macros
+
 Tue Jul 19 19:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Log_Record.cpp:
